Import of DELTA/Digest-Perl-MD5-1.5 from CPAN.
gitpan-cpan-distribution: Digest-Perl-MD5
gitpan-cpan-version:      1.5
gitpan-cpan-path:         DELTA/Digest-Perl-MD5-1.5.tar.gz
gitpan-cpan-author:       DELTA
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.5:    Don't rely on (1 << 32) being 1 on 32 bit machines.
+	Get rid of ``no integer'' pragma and inline rotate left
+	function.
+	Version 1.5 outperforms version 1.4 approximately by
+	factor 2.
+
 1.4:	Removed obsolete sum() function (hint from Guido Flohr)
 	round() function is now dynamically generated,
 	different code for 32bit and 64bit architechtures.
