--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.6:	Reworked OOP Interface:
+	- added reset() and clone() (to be compatible with Digest::MD5)
+	- add() and addfile() now save memory
+	- added more tests
+	- added tools/md5 (BSD compatible md5(1))
+	
 1.5:    Don't rely on (1 << 32) being 1 on 32 bit machines.
 	Get rid of ``no integer'' pragma and inline rotate left
 	function.
